arm64: dts: add C10 touch offload id
Bug: 199104316
Test: Be able to get offload id from driver.

Signed-off-by: davidycchen <davidycchen@google.com>
Change-Id: Icfec26796080e2326ba29e28e248f6be8da6190c

--- a/arch/arm64/boot/dts/google/gs201-cheetah-touch.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cheetah-touch.dtsi
@@ -45,6 +45,7 @@
 	synaptics,firmware_names = "synaptics.img",
 				   "synaptics.img",
 				   "synaptics_b.img";
+	synaptics,touch_offload_id = /bits/ 8 <'c' '1' '0' '0'>;
 
 	controller-data {
 		cs-gpio = <&gpp20 3 0>;
