build/config/cloudripper: The module to support audio metrics
Bug: 206007421
Test: build passed
Signed-off-by: Roger Fang <rogerfang@google.com>
Change-Id: Ibde21cd284881fc8c63cdbd087fe2cdd21221903

--- a/Makefile.ext_modules.cloudripper
+++ b/Makefile.ext_modules.cloudripper
@@ -3,6 +3,7 @@
 rel_path := ../google-modules
 
 ext_modules :=
+ext_modules += amplifiers/audiometrics
 ext_modules += amplifiers/cs35l41
 ext_modules += amplifiers/cs35l45
 ext_modules += amplifiers/cs40l26
