arm64/dts: gs201: Sync dpm config for userdebug
disable arraydump panic and slcdump

Bug: 199796796
Signed-off-by: Jone Chou <jonechou@google.com>
Change-Id: I6db063dde23115f5f9a1d7e260aed3f3264345e4

--- a/arch/arm64/boot/dts/google/gs201-dpm-userdebug.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-dpm-userdebug.dtsi
@@ -64,3 +64,15 @@
 		};
 	};
 }; /* end of dpm */
+
+&log_arrdumppanic {
+	status = "disabled";
+};
+
+&log_preslcdump {
+	status = "disabled";
+};
+
+&log_slcdump {
+	status = "disabled";
+};
