arm64: dts: gs201: Update BTS settings
Update BTS settings to match gs101

Bug: 209521847
Test: Boot and check via /d/bts nodes
Signed-off-by: Jia-yi Chen <jychen@google.com>
Change-Id: Ia220d3397b03cd7ac2c5cb076c671d1f9ccd4be4

--- a/arch/arm64/boot/dts/google/gs201-bts.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-bts.dtsi
@@ -47,7 +47,8 @@
 
 		rt-names = "DECON0",
 			   "csi",
-			   "ipp";
+			   "ipp",
+			   "g3aa";
 
 		/* TREX_D_NOCL0 */
 
@@ -223,7 +224,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -234,7 +235,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -245,7 +246,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -256,7 +257,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -267,7 +268,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -278,7 +279,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0xC>;
 				qurgent_th_w = <0x6>;
 				blocking_on = <0>;
@@ -315,7 +316,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				qurgent_th_w = <0x20>;
 				blocking_on = <0>;
@@ -327,7 +328,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -338,7 +339,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -349,7 +350,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -360,7 +361,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -371,7 +372,7 @@
 				arqos = <0x8>;
 				awqos = <0x8>;
 				rmo = <0x40>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0xC>;
 				qurgent_th_w = <0x6>;
 				blocking_on = <0>;
@@ -409,7 +410,7 @@
 				awqos = <0x8>;
 				rmo = <0x40>;
 				wmo = <0x20>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -421,7 +422,7 @@
 				awqos = <0x8>;
 				rmo = <0x40>;
 				wmo = <0x20>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -433,7 +434,7 @@
 				awqos = <0x8>;
 				rmo = <0x40>;
 				wmo = <0x20>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -445,7 +446,7 @@
 				awqos = <0x8>;
 				rmo = <0x40>;
 				wmo = <0x20>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -457,7 +458,7 @@
 				awqos = <0x8>;
 				rmo = <0x40>;
 				wmo = <0x20>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0x20>;
 				blocking_on = <0>;
 				ex_qurgent_on = <0>;
@@ -469,7 +470,7 @@
 				awqos = <0x8>;
 				rmo = <0x40>;
 				wmo = <0x20>;
-				qurgent_on = <0>;
+				qurgent_on = <1>;
 				qurgent_th_r = <0xC>;
 				qurgent_th_w = <0x6>;
 				blocking_on = <0>;
@@ -1613,9 +1614,9 @@
 			default {
 				stat_on = <1>;
 				bypass = <0>;
-				arqos = <0x9>;
-				awqos = <0x9>;
-				qurgent_on = <1>;
+				arqos = <0x4>;
+				awqos = <0x4>;
+				qurgent_on = <0>;
 				qurgent_th_r = <0xF>;
 				qurgent_th_w = <0xF>;
 				blocking_on = <0>;
