--- a/arch/arm64/boot/dts/google/gs201-cloudripper-cp-s5300-sit.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cloudripper-cp-s5300-sit.dtsi
@@ -26,7 +26,10 @@
 					<&s5100_cp2ap_wakeup>,
 					<&s5100_ap2cp_dump_noti>,
 					<&s5100_ap2cp_pda_active>,
-					<&s5100_cp2ap_phone_active>;
+					<&s5100_cp2ap_phone_active>,
+					<&s5100_ap2cp_cp_wrst_n>,
+					<&s5100_cp2ap_cp_wrst_n>,
+					<&s5100_ap2cp_pm_wrst_n>;
 
 				/* Definition of GPIOs */
 				gpio_ap2cp_wake_up =	<&gph0 2 0x1>;
@@ -34,6 +37,8 @@
 				gpio_ap2cp_cp_pwr_on =	<&gph1 2 0x1>;
 				gpio_ap2cp_pda_active =	<&gph1 1 0x1>;
 				gpio_ap2cp_nreset_n =	<&gph1 3 0x1>;
+				gpio_ap2cp_cp_wrst_n =	<&gph1 6 0x1>;
+				gpio_ap2cp_pm_wrst_n =	<&gpa0 3 0x1>;
 
 				gpio_cp2ap_phone_active = <&gpa8 4 0x1>;
 				gpio_cp2ap_cp_ps_hold =	<&gpa8 2 0x1>;
@@ -47,6 +52,20 @@
 				mif,cp2ap_active_not_alive = <0>;
 			};
 		};
+	};
+};
+
+&pinctrl_0 {
+	s5100_cp2ap_cp_wrst_n: s5100_cp2ap_cp_wrst_n {
+		samsung,pins = "gpa0-2";
+		samsung,pin-function = <0>;
+		samsung,pin-pud = <0>;
+	};
+
+	s5100_ap2cp_pm_wrst_n: s5100_ap2cp_pm_wrst_n {
+		samsung,pins = "gpa0-3";
+		samsung,pin-function = <1>;
+		samsung,pin-pud = <0>;
 	};
 };
 
@@ -100,6 +119,13 @@
 
 	s5100_ap2cp_dump_noti: s5100_ap2cp_dump_noti {
 		samsung,pins = "gph0-3";
+		samsung,pin-pud = <0>;
+		samsung,pin-con-pdn = <3>;
+		samsung,pin-pud-pdn = <0>;
+	};
+
+	s5100_ap2cp_cp_wrst_n: s5100_ap2cp_cp_wrst_n {
+		samsung,pins = "gph1-6";
 		samsung,pin-pud = <0>;
 		samsung,pin-con-pdn = <3>;
 		samsung,pin-pud-pdn = <0>;
