--- a/arch/arm64/boot/dts/google/gs101-raviole-bcl.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-raviole-bcl.dtsi
@@ -15,7 +15,8 @@
 			google_mitigation: google,mitigation {
 				compatible = "google,google-bcl";
 				#thermal-sensor-cells = <1>;
-				google,power-supply = <&google_battery>;
+				google,charger = <&max77759_chg>;
+				google,power-supply = <&max77759_fg>;
 				google,main-power = <&s2mpg10mfd>;
 				google,sub-power = <&s2mpg11mfd>;
 				ppm_settings = <0>;
