--- a/arch/arm64/boot/dts/google/gs101-slider-bcl.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-slider-bcl.dtsi
@@ -15,8 +15,8 @@
 			google_mitigation: google,mitigation {
 				compatible = "google,google-bcl";
 				#thermal-sensor-cells = <1>;
-				google,power-supply = <&google_battery>;
-				google,main-power = <&s2mpg10mfd>;
+				google,charger = <&max77759_chg>;
+				google,power-supply = <&max77759_fg>;
 				google,sub-power = <&s2mpg11mfd>;
 				ppm_settings = <0>;
 				mpmm_settings = <0x1a>;
