--- a/arch/arm64/boot/dts/google/gs201-cloudripper-bcl.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cloudripper-bcl.dtsi
@@ -15,7 +15,8 @@
 			google_mitigation: google,mitigation {
 				compatible = "google,google-bcl";
 				#thermal-sensor-cells = <1>;
-				google,power-supply = <&google_battery>;
+				google,charger = <&max77759_chg>;
+				google,power-supply = <&max77759_fg>;
 				google,main-power = <&s2mpg12mfd>;
 				google,sub-power = <&s2mpg13mfd>;
 				ppm_settings = <0>;
@@ -40,7 +41,7 @@
 		zone_name  = "BATOILO";
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-sensors = <&max77759_chg 2>;
+		thermal-sensors = <&google_mitigation 3>;
 		trips {
 			batoilo: batoilo{
 				temperature = <5000>;
@@ -54,7 +55,7 @@
 		zone_name  = "VDROOP1";
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-sensors = <&max77759_chg 0>;
+		thermal-sensors = <&google_mitigation 1>;
 		trips {
 			vdroop1: vdroop1{
 				temperature = <1150>;
@@ -68,7 +69,7 @@
 		zone_name  = "VDROOP2";
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-sensors = <&max77759_chg 1>;
+		thermal-sensors = <&google_mitigation 2>;
 		trips {
 			vdroop2: vdroop2{
 				temperature = <1350>;
@@ -89,7 +90,7 @@
 		zone_name  = "PMIC_120C";
 		polling-delay-passive = <1000>;
 		polling-delay = <0>;
-		thermal-sensors = <&google_mitigation 1>;
+		thermal-sensors = <&google_mitigation 4>;
 		trips {
 			pmic_120c: pmic-120c {
 				temperature = <1200>;
@@ -103,7 +104,7 @@
 		zone_name  = "PMIC_140C";
 		polling-delay-passive = <1000>;
 		polling-delay = <0>;
-		thermal-sensors = <&google_mitigation 2>;
+		thermal-sensors = <&google_mitigation 5>;
 		trips {
 			pmic_140c: pmic-140c {
 				temperature = <1400>;
@@ -117,7 +118,7 @@
 		zone_name  = "PMIC_OVERHEAT";
 		polling-delay-passive = <1000>;
 		polling-delay = <0>;
-		thermal-sensors = <&google_mitigation 3>;
+		thermal-sensors = <&google_mitigation 6>;
 		trips {
 			pmic_overheat: pmic-overheat{
 				temperature = <2000>;
