arm64/dts: gs201: Fix typo in G3AA power domain ID
G3AA TZPC address used in power management SMCs is 0x1a810204, not
0x1ab10204. This used to cause a kernel panic when using the camera.

Test: open camera, no crash
Bug: 213410912
Bug: 190463801
Signed-off-by: David Brazdil <dbrazdil@google.com>
Change-Id: I87a9f1f8901a169cb4b1bf358da870a6d445b6f4

--- a/arch/arm64/boot/dts/google/gs201-s2mpu.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-s2mpu.dtsi
@@ -106,7 +106,7 @@
 	s2mpu_g3aa: s2mpu@1a8a0000 {
 		compatible = "google,s2mpu";
 		reg = <0x0 0x1a8a0000 0x10000>;
-		power-domain-id = <0x1ab10204>;
+		power-domain-id = <0x1a810204>;
 		interrupts = <GIC_SPI IRQ_SYSMMU_G3AA_S2_G3AA IRQ_TYPE_LEVEL_HIGH>;
 	};
 
