--- a/arch/arm64/boot/dts/google/gs201-tpu.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-tpu.dtsi
@@ -25,7 +25,7 @@
 			<0 IRQ_MAILBOX_TPU2AP_NS_TPU_5_TPU IRQ_TYPE_LEVEL_HIGH>,
 			<0 IRQ_MAILBOX_TPU2AP_NS_TPU_6_TPU IRQ_TYPE_LEVEL_HIGH>,
 			<0 IRQ_MAILBOX_TPU2AP_NS_TPU_7_TPU IRQ_TYPE_LEVEL_HIGH>;
-		/* TODO(b/195608852): Enable coherency */
+		dma-coherent;
 		iommus = <&sysmmu_tpu>;
 		samsung,iommu-group = <&iommu_group_tpu>;
 		status = "okay";
