arm64/dts: cheetah: update display vddd power supply voltage
3HC4 based panel need 1.125V on vddd rail.

Bug: 210940195
Signed-off-by: Shiyong Li <shiyongli@google.com>
Change-Id: I14c670f9c7719b0553840cbb6fdaaf14bdf0987d

--- a/arch/arm64/boot/dts/google/gs201-cheetah-display.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cheetah-display.dtsi
@@ -35,3 +35,7 @@
 		#include "gs201-cheetah-display-common.dtsi"
 	};
 };
+
+&sdc_s6e3hc4 {
+	vddd-normal-microvolt = <CHEETAH_3HC4_VDDD_NORMAL_MICROVOLT>;
+};
