--- a/arch/arm64/boot/dts/google/gs201-cheetah-display-constants.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cheetah-display-constants.dtsi
@@ -7,4 +7,5 @@
  */
 #define CHEETAH_VCI_MICROVOLT 3025000
 #define CHEETAH_VDDD_NORMAL_MICROVOLT 1200000
+#define CHEETAH_3HC4_VDDD_NORMAL_MICROVOLT 1125000
 #define CHEETAH_VDDD_LP_MICROVOLT 1050000
