arm64/dts: correct touch regulator voltage
Bug: 214862811
Test: Touch is workable.

Signed-off-by: davidycchen <davidycchen@google.com>
Change-Id: I1210247467b6d38bccb7217063b717572c718e3a

--- a/arch/arm64/boot/dts/google/gs201-cheetah-touch.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cheetah-touch.dtsi
@@ -10,10 +10,14 @@
 #include <dt-bindings/regulator/samsung,s2mpg-regulator.h>
 
 &m_ldo25_reg {
+	regulator-min-microvolt = <1800000>;
+	regulator-max-microvolt = <1800000>;
 	/delete-property/ regulator-always-on;
 };
 
 &m_ldo26_reg {
+	regulator-min-microvolt = <3300000>;
+	regulator-max-microvolt = <3300000>;
 	/delete-property/ regulator-always-on;
 };
 
