arm64/dts: gs101: remove PCIe LDO properties and change LDO mode
LDOs should be turned on/off along with HSI Reset which is done in the
ACPM code. So we need to remove the LDO control for the pcie driver from
the device tree and change the LDO to be controlled through
suspend/resume.

Bug: 214437730
Signed-off-by: Kisang Lee <kisang80.lee@samsung.com>
Change-Id: Ia06a81e62e138f34dc5bb2c1a870a54ac287425f

--- a/arch/arm64/boot/dts/google/gs101-pmic.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-pmic.dtsi
@@ -441,7 +441,8 @@
 				regulator-name = "S2MPG10_LDO16";
 				regulator-min-microvolt = <725000>;
 				regulator-max-microvolt = <1300000>;
-				regulator-initial-mode = <SEC_OPMODE_ON>;
+				regulator-always-on;
+				regulator-initial-mode = <SEC_OPMODE_SUSPEND>;
 				channel-mux-selection = <0x30>;
 				schematic-name = "L16M_PCIE0";
 				subsys-name = "PCIE";
@@ -451,7 +452,8 @@
 				regulator-name = "S2MPG10_LDO17";
 				regulator-min-microvolt = <725000>;
 				regulator-max-microvolt = <1300000>;
-				regulator-initial-mode = <SEC_OPMODE_ON>;
+				regulator-always-on;
+				regulator-initial-mode = <SEC_OPMODE_SUSPEND>;
 				channel-mux-selection = <0x31>;
 				schematic-name = "L17M_PCIE1";
 				subsys-name = "PCIE";
@@ -461,7 +463,8 @@
 				regulator-name = "S2MPG10_LDO18";
 				regulator-min-microvolt = <1600000>;
 				regulator-max-microvolt = <1950000>;
-				regulator-initial-mode = <SEC_OPMODE_ON>;
+				regulator-always-on;
+				regulator-initial-mode = <SEC_OPMODE_SUSPEND>;
 				channel-mux-selection = <0x32>;
 				schematic-name = "L18M_PCIE0";
 				subsys-name = "PCIE";
@@ -471,7 +474,8 @@
 				regulator-name = "S2MPG10_LDO19";
 				regulator-min-microvolt = <1600000>;
 				regulator-max-microvolt = <1950000>;
-				regulator-initial-mode = <SEC_OPMODE_ON>;
+				regulator-always-on;
+				regulator-initial-mode = <SEC_OPMODE_SUSPEND>;
 				channel-mux-selection = <0x33>;
 				schematic-name = "L19M_PCIE1";
 				subsys-name = "PCIE";
