dma-heap: samsung: Protect memory by LEND'ing to Trusty
Bug: 206813152
Test: enroll/autheticate faceauth and fingerprint
Test: ExoPlayer Secure L1
Signed-off-by: Tri Vo <trong@google.com>
Change-Id: I32ef52e6e08b7ea20d6de3e0d505366e0e5c01e7

--- a/drivers/dma-buf/heaps/samsung/Kconfig
+++ b/drivers/dma-buf/heaps/samsung/Kconfig
@@ -4,6 +4,7 @@ config DMABUF_SAMSUNG_HEAPS
 	select SAMSUNG_SECURE_IOVA if EXYNOS_CONTENT_PATH_PROTECTION
 	select DMABUF_HEAPS_PAGE_POOL
 	select DMABUF_HEAPS_DEFERRED_FREE
+	select TRUSTY_DMA_BUF_SHARED_MEM_ID
 	depends on DMABUF_HEAPS
 	help
 	  Choose this option to enable the DMA-BUF userland memory heaps for samsung.
