arm64/dts: cloudripper: add panel nt37290
Add G10 panel BOE nt37290 so that we can do specific tests on
Cloudripper.

Bug: 209884393
Test: panel works on Cloudripper
Change-Id: Iac761963f00f32d9dc9c7bbbbb9d9997aa7ccd15
Signed-off-by: Chris Lu <luchris@google.com>

--- a/arch/arm64/boot/dts/google/gs201-cloudripper-display.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cloudripper-display.dtsi
@@ -94,4 +94,16 @@
 		vci-supply = <&s_ldo6_reg>;
 		vddi-supply = <&s_bucka_reg>;
 	};
+	panel@5 {
+		compatible = "boe,nt37290";
+		label = "boe-nt37290";
+		channel = <0>;
+
+		/* reset, power */
+		reset-gpios = <&gpp23 0 GPIO_ACTIVE_HIGH>;
+		vddd-normal-microvolt = <CHEETAH_3HC4_VDDD_NORMAL_MICROVOLT>;
+		vddd-lp-microvolt = <CHEETAH_VDDD_LP_MICROVOLT>;
+		vci-supply = <&s_ldo6_reg>;
+		vddi-supply = <&s_bucka_reg>;
+	};
 };
