arm64/dts: gs201: enable vibe_state report
Enable the driver to report the device's state.
Disable the "Boost Exploratory Mode" as while.

Boost Exploratory Mode: allows for the device to overshoot the value
programmed for maximum boost current (BST_IPK) upon initial power
up which has the potential to damage the boost inductor.
(Note: After disabled, the ability to detect LBST_SHORT_ERR is
degraded.)
Reference: b/208750732#comment51.

Bug: 205688153
Test: No error logs.
Signed-off-by: Tai Kuo <taikuo@google.com>
Change-Id: Ie489f32907729c77bbda3190d1d4b9453f02527a

--- a/arch/arm64/boot/dts/google/gs201-cs40l26a-config.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cs40l26a-config.dtsi
@@ -90,6 +90,8 @@
 		/* TODO (b/185767279): check the trigger & refclk pin usage. */
 
 		cirrus,bst-dcm-en = <0>;
+		cirrus,vibe-state;
+		cirrus,bst-expl-mode-disable;
 		status = "okay";
 
 		cs40l26_codec: cs40l26_codec@snd {
