--- a/arch/arm64/boot/dts/google/gs201.dtsi
+++ b/arch/arm64/boot/dts/google/gs201.dtsi
@@ -700,6 +700,7 @@
 			phy-names = "usb2-phy", "usb3-phy";
 			/* support usb offloading, 0: disabled, 1: audio */
 			offload = <1>;
+			direct-usb-access;
 		};
 	};
 
