arm64/dts: Move Trusty to main DTB
This makes it easier for devices to depend on Trusty.

Also, move Trusty node to root, since odm node only exists in DTBO.

Bug: 206813152
Change-Id: Ie9436c7fcdf4a13685f5c31eb11f67b3ad61cb12
Signed-off-by: Tri Vo <trong@google.com>

--- a/arch/arm64/boot/dts/google/gs101.dtsi
+++ b/arch/arm64/boot/dts/google/gs101.dtsi
@@ -17,6 +17,7 @@
 #include <dt-bindings/soc/google/gs101-pm-qos.h>
 #include <dt-bindings/soc/google/debug-snapshot-def.h>
 #include "gs101-rmem.dtsi"
+#include "gs101-trusty.dtsi"
 #include "gs101-bigo.dtsi"
 #include "gs101-bts.dtsi"
 #include "gs101-cp-tm.dtsi"
