--- a/arch/arm64/boot/dts/google/gs201.dtsi
+++ b/arch/arm64/boot/dts/google/gs201.dtsi
@@ -13,6 +13,7 @@
 #include <dt-bindings/soc/google/gs201-devfreq.h>
 #include <dt-bindings/soc/google/gs201-pm-qos.h>
 #include "gs201-rmem.dtsi"
+#include "gs101-trusty.dtsi"
 #include "gs201-bts.dtsi"
 #include "gs101-cp-tm.dtsi"
 #include "gs201-cpu.dtsi"
